<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addItem"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:iconTint="@color/dark_liver"
        android:title="@string/inventory_menu_add_item"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/removeItem"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_remove_box_24"
        android:iconTint="@color/dark_liver"
        android:title="@string/inventory_menu_remove_item"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/update_item"
        android:enabled="true"
        android:icon="@drawable/ic_update_item_24"
        android:iconTint="@color/dark_liver"
        android:title="@string/inventory_menu_update_item"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/app_bar_switch"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/inventory_menu_notification_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="never" />
</menu>