<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_item_dialog"
    style="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_item_dialog_header"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inventory_menu_add_item"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_item_sku_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_item_dialog_sku_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_item_sku_label"
        app:layout_constraintTop_toBottomOf="@id/add_item_dialog_header" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_item_sku_label"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_dialog_sku_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/add_item_sku_input"
        app:layout_constraintEnd_toEndOf="@id/add_item_qty_label"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_item_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_item_dialog_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_item_name_label"
        app:layout_constraintTop_toBottomOf="@id/add_item_sku_input" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_item_name_label"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_dialog_name_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/add_item_name_input"
        app:layout_constraintEnd_toEndOf="@id/add_item_qty_label"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_item_qty_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_item_dialog_qty_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_item_qty_label"
        app:layout_constraintTop_toBottomOf="@id/add_item_name_input" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_item_qty_label"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_dialog_qty_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/add_item_qty_input"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>