<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/remove_item_warning"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/remove_item_warning_sku"
        style="@style/DialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_item_warning_sku"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_item_warning_text" />

    <TextView
        android:id="@+id/remove_item_warning_name"
        style="@style/DialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_item_warning_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_item_warning_sku" />

    <TextView
        android:id="@+id/remove_item_warning_text"
        style="@style/DialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_item_warning_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_item_warning_header" />

    <TextView
        android:id="@+id/remove_item_warning_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/amaranth_pink"
        android:text="@string/remove_item_warning_header"
        android:textAlignment="center"
        android:textColor="#424242"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>