<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_item_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/update_item_dialog_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_item_header"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/update_item_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/update_item_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/update_item_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/update_item_qty_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/update_item_name_label"
        app:layout_constraintTop_toBottomOf="@+id/update_item_dialog_header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/update_item_qty_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/update_item_qty_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/update_item_qty_label"
        app:layout_constraintTop_toBottomOf="@+id/update_item_name_input" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/update_item_name_label"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_item_name_label"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/update_item_name_input"
        app:layout_constraintEnd_toEndOf="@id/update_item_qty_label"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/update_item_qty_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_item_qty_label"
        app:layout_constraintBaseline_toBaselineOf="@id/update_item_qty_input"
        app:layout_constraintEnd_toStartOf="@+id/update_item_qty_input"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>