<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/get_item_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/get_item_header"
        style="@style/DialogHeaderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_item_header"
        android:textColor="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/get_item_sku_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/get_item_sku_label"
        app:layout_constraintBaseline_toBaselineOf="@id/get_item_sku_input"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/get_item_sku_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/get_item_sku_input_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/get_item_sku_label"
        app:layout_constraintTop_toBottomOf="@id/get_item_header" />

</androidx.constraintlayout.widget.ConstraintLayout>