<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/remove_sku_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/remove_item_dialog_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/amaranth_pink"
        android:text="@string/inventory_menu_remove_item"
        android:textAlignment="center"
        android:textColor="#424242"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/remove_item_sku_label"
        style="@style/DialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_item_dialog_sku_label"
        app:layout_constraintBaseline_toBaselineOf="@id/remove_item_sku_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_item_dialog_header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/remove_item_sku_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/remove_item_dialog_sku_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/dark_liver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/remove_item_sku_label"
        app:layout_constraintTop_toBottomOf="@+id/remove_item_dialog_header" />
</androidx.constraintlayout.widget.ConstraintLayout>