<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_drawer_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inventory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                style="@style/ToolbarStyle"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/ic_menu_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:contentDescription="@string/desc_add_floating_button"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_inventory_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_name_header" />

        <TextView
            android:id="@+id/main_sku_header"
            style="@style/InventoryHeader"
            android:layout_height="0dp"
            android:background="@drawable/inventory_header_border_left_end"
            android:ems="4"
            android:maxLength="6"
            android:text="@string/inventory_sku_header_label"
            app:layout_constraintEnd_toStartOf="@id/main_name_header"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/main_name_header"
            style="@style/InventoryHeader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/inventory_header_border"
            android:text="@string/inventory_name_header_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/main_qty_header"
            app:layout_constraintStart_toEndOf="@id/main_sku_header"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/main_qty_header"
            style="@style/InventoryHeader"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/inventory_header_border_right_end"
            android:ems="3"
            android:text="@string/inventory_qty_header_label"
            app:layout_constraintEnd_toStartOf="@id/button_header_delete"
            app:layout_constraintStart_toEndOf="@id/main_name_header"
            tools:layout_editor_absoluteY="56dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/button_header_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/inventory_header_border"
            android:clickable="false"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/main_inventory_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_qty_header"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="invisible"
        app:menu="@menu/navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>